minor changes. updates to redux store. typos

--- a/client/src/features/landing/Landing.css
+++ b/client/src/features/landing/Landing.css
@@ -132,12 +132,17 @@ html {
 }
 
 .landing #row-details #box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 0.5rem;
   text-align: center;
   margin: 1rem;
   transition: 0.3s;
   min-height: 25vh;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
 }
 
 .landing #row-details #box:hover {
