--- a/client/src/features/dashboard/graph/Graph.css
+++ b/client/src/features/dashboard/graph/Graph.css
@@ -1,165 +1,86 @@
 /* GRAPH */
 #graph-filter-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0rem 1rem 1rem 0rem;
-    width: 100%;
-    height: auto;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
-  }
-  
-  #graph-filter-title {
-    text-align: center;
-    font-weight: bold;
-    padding: 0;
-    margin: 0;
-  }
-  
-  #graph-filter-items {
-    width: 100%;
-  }
-  
-  #graph-filter-btn-group {
-    display: flex;
-    justify-content: center;
-    margin: 0.25rem;
-  }
-  
-  #graph-filter-tree-node-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-    height: 100%;
-  }
-  
-  #graph-filter-tree-node {
-    white-space: nowrap;
-    overflow-x: hidden;
-    font-size: 0.9rem;
-    text-overflow: ellipsis;
-  }
-  
-  #graph-filter-tree-node-key {
-    margin-right: 0.25rem;
-    margin-left: 0.5rem;
-    width: 0.75rem;
-    height: 0.75rem;
-    border-radius: 0.25rem;
-  }
-  
-  #graph-filter-search {
-    width: 100px;
-    height: 1.5rem;
-    margin: 0.25rem;
-    font-size: 0.75rem;
-  }
-  
-  #graph-legend-container {
-    display: flex;
-    flex-direction: column;
-    margin: 1rem auto;
-    width: 100%;
-    height: auto;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
-  }
-  
-  #graph-legend-title {
-    text-align: center;
-    font-weight: bold;
-    padding: 0;
-    margin: 0;
-  }
-  
-  #graph-legend-list {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-size: 0.8rem;
-    padding: 0.5rem;
-    width: 100%;
-    overflow-y: auto;
-    max-height: 20vh;
-  }
-  
-  /* width */
-  #graph-legend-list::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-  /* Track */
-  #graph-legend-list::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  
-  /* Handle */
-  #graph-legend-list::-webkit-scrollbar-thumb {
-    background: #cfd8dc;
-  }
-  
-  /* Handle on hover */
-  #graph-legend-list::-webkit-scrollbar-thumb:hover {
-    background: #607d8b;
-  }
-  
-  #graph-legend-item {
-    font-size: 100%;
-    white-space: nowrap;
-    padding: 0.25rem 0.5rem;
-    border-radius: 0.25rem;
-    margin: 0.25rem 0rem;
-  }
-  
-  #graph-info-container {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    margin: 0rem 0rem 1rem 0rem;
-    padding: 0.25rem 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
-  }
-  
-  #graph-info-title {
-    text-align: center;
-    font-weight: bold;
-    padding: 0;
-    margin: 0;
-  }
-  
-  #graph-info-icon {
-    font-size: 1.25rem;
-  }
-  
-  #graph-info-content {
-    padding: 0;
-    margin: 0.5rem;
-    text-align: center;
-    max-height: 100px;
-    overflow-y: auto;
-  }
-  
-  #graph-overview-container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0rem 1rem 1rem 0rem;
-    width: 100%;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
-    height: 50px;
-  }
-  
-  #graph-overview-container #metric-container {
-    align-items: center;
-    font-weight: bold;
-    cursor: help;
-  }
-  
-  /* #graph-overview-container #metric-container:hover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+}
+
+#graph-filter-title {
+  text-align: center;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+}
+
+#graph-filter-items {
+  width: 100%;
+}
+
+#graph-filter-btn-group {
+  display: flex;
+  justify-content: center;
+  margin: 0.25rem;
+}
+
+#graph-filter-search {
+  /* width: 100px; */
+  height: 1.5rem;
+  margin: 0.25rem;
+  width: 70%;
+  font-size: 0.75rem;
+}
+
+#graph-info-container {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  margin: 0rem 0rem 1rem 0rem;
+  padding: 0.25rem 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+#graph-info-title {
+  text-align: center;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+}
+
+#graph-info-icon {
+  font-size: 1.25rem;
+}
+
+#graph-info-content {
+  padding: 0;
+  margin: 0.5rem;
+  text-align: center;
+  max-height: 100px;
+  overflow-y: auto;
+}
+
+#graph-overview-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0rem 1rem 1rem 0rem;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  height: 3rem;
+}
+
+#graph-overview-container #metric-container {
+  align-items: center;
+  font-weight: bold;
+  cursor: help;
+}
+
+/* #graph-overview-container #metric-container:hover {
     background-color: #eceff1;
     border-radius: 0.25rem;
   } */
