--- a/client/src/features/project/Project.css
+++ b/client/src/features/project/Project.css
@@ -38,7 +38,7 @@
   background-color: #fff;
   padding: 0.5rem;
   width: 100%;
-  max-width: 300px;
+  /* max-width: 300px; */
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
